--- a/learnObjective-C/Podfile
+++ b/learnObjective-C/Podfile
@@ -2,4 +2,5 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '7.0'
 target 'learnObjective-C' do
 pod 'Masonry','1.1.0'
+pod 'YYKit'
 end
